--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             aria-expanded="false">
                             Skills<br></a></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4"
-                            href="index.html#features18-9" data-toggle="dropdown-submenu" aria-expanded="true">
+                            href="portfolio.html#content-5g" data-toggle="dropdown-submenu" aria-expanded="true">
                             Portfolio<br></a>
                         <div class="dropdown-menu"><a class="dropdown-item text-primary display-4"
                                 href="portfolio.html#features11-1o">Project 1<br></a><a
