--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="menu-logo">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-                        <a href="index.html">
+                        <a href="https://jufredriksson.github.io/">
                             <img src="assets/images/logo23.png" alt="Logo" title=""
                                 style="height: 3.8rem;">
                         </a>
