--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
     </div>          
 </section>
 
-<section class="features11 cid-rBoebqCfMv" id="features11-26">
+<section class="features11 cid-rBekasJ13q" id="features11-1o">
 
     
 
@@ -136,7 +136,7 @@
                 <div class="mbr-figure m-auto" style="width: 50%;">
                     <img src="assets/images/jeremy-thomas-4dpaqftbvka-unsplash-1-904x597.jpeg" alt="Mobirise" title="">
                 </div>
-                <div class=" align-left aside-content">
+                <div class="align-left aside-content">
                     <h2 id="spacing" class="mbr-title pt-2 mbr-fonts-style display-2">
                         Project 2</h2>
                         <h3 id="company-name" class="mbr-section-subtitle py-3 mbr-fonts-style display-7">
@@ -151,6 +151,7 @@
         </div> 
     </div>          
 </section>
+
 
 <section class="features11 cid-rBoebURh40" id="features11-27">
 
