--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </div>
     </section>
 
-    <section once="footers" class="cid-rBcX1nYsQz" id="footer7-1c">
+    <footer once="footers" class="cid-rBcX1nYsQz" id="footer7-1c">
 
 
 
@@ -370,13 +370,13 @@
 
 
                         <div class="soc-item">
-                            <a href="http://www.linkedin.com/in/jufredriksson" target="_blank">
+                            <a href="http://www.linkedin.com/in/jufredriksson" rel="noreferrer" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"
                                     ></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://github.com/jufredriksson" target="_blank">
+                            <a href="https://github.com/jufredriksson" rel="noreferrer" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon"
                                     ></span>
                             </a>
@@ -401,7 +401,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
 
 
     <script src="assets/web/assets/jquery/jquery.min.js"></script>
