--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://jufredriksson.github.io/">
-                        <img src="assets/images/logo23.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/logo23.png" alt="Logo" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -179,7 +179,7 @@
     </div>          
 </section>
 
-<section once="footers" class="cid-rBcX1nYsQz" id="footer7-1c">
+<footer once="footers" class="cid-rBcX1nYsQz" id="footer7-1c">
 
 
 
@@ -197,13 +197,13 @@
 
 
                     <div class="soc-item">
-                        <a href="http://www.linkedin.com/in/jufredriksson" target="_blank">
+                        <a href="http://www.linkedin.com/in/jufredriksson" rel="noreferrer" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"
                                 ></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://github.com/jufredriksson" target="_blank">
+                        <a href="https://github.com/jufredriksson" rel="noreferrer" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon"
                                 ></span>
                         </a>
@@ -228,7 +228,7 @@
             </div>
         </div>
     </div>
-</section>
+</footer>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
